About me section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h3>Brock Hanni</h3>
+        <h2>Brock Hanni</h2>
         <nav class="nav">
             <!-- links to different sections on page -->
             <a href="#About" class="button">About Me</a>
@@ -19,8 +19,39 @@
             <a href="#Recent" class="button">Recent Work</a>
             <a href="#Resume" class="button">Resume</a>
         </nav>
-       </header>
+    </header>
 
+
+    <main>
+        <!-- About Me section -->
+        <section class="aboutme">
+            <h2>About me</h2>
+           
+         
+                <li>I am 24 year old student at the University of Utah, currently in a bootcamp for Web-Development</li>
+                <br>
+                <li>I've been happily married since May 2021</li>
+                <br>
+                <li>I am a co-owner of Universal Computers, a local computer company in Bountiful, Utah</li>
+                <br>
+                <li>I am a fan of all things basketball! (Go Jazz!!)</li>
+                <br>
+                <br>
+             <section>
+                <img src="./assets/images/Me.jpg" class="me-pic">
+            </section>
+
+
+        </section>
+
+        <section class="recentwork">Recent Work</section>
+        <section class="resume">Resume</section>
+        <section class="contact">Contact Me</section>
+
+
+
+
+    </main>
 
 </body>
 </html>
