added media screen size

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                     <div> 
                         <div class="container">
                          <a href="https://brockhanni.github.io/Box/">
-                         <img src="./assets/images/MagicSquare.jpg" alt="Magic Square"
-                         width="150"
-                         height="100">
+                         <img src="./assets/images/MagicSquare.jpg" alt="Magic Square" class="preview">
                          </a>
                           <p>This is a magic square you can change by pressing the buttons</p>
                         </div>
@@ -64,9 +62,7 @@
                 <section>
                     <div class="container">
                         <a href="https://brockhanni.github.io/Password-Generator/">
-                        <img src="./assets/images/PasswordGenerator.jpg" alt="Magic Square"
-                        width="150"
-                        height="100">
+                        <img src="./assets/images/PasswordGenerator.jpg" alt="Magic Square" class="preview">
                         </a>
                          <p>This is a random Password Generator</p>
                        </div>
@@ -75,9 +71,8 @@
                 <section>
                     <div class="container">
                         <a href="https://avialmonanay.github.io/Day-At-A-Glance/">
-                        <img src="./assets/images/DayAtAGlace.jpg" alt="Magic Square"
-                        width="150"
-                        height="100">  </a>
+                        <img src="./assets/images/DayAtAGlace.jpg" alt="Magic Square" class="preview"> 
+                    </a>
                          <p>This is a day planner app a few friends and I made together</p>
                        </div>
                 </section>
