--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 </section>
                 <section>
                     <div class="container">
-                        <a href="https://brockhanni.github.io/Password-Generator/">
-                        <img src="./assets/images/PasswordGenerator.jpg" alt="Magic Square" class="preview">
+                        <a href="https://brockhanni.github.io/Writers-Corner/">
+                        <img src="./assets/images/Rainy.gif" alt="Writers-Corner" class="preview">
                         </a>
-                         <p>This is a random Password Generator</p>
+                         <p>This is Writers Corner</p>
                        </div>
                     
                 </section>
